@@ -4,6 +4,8 @@ Bug tracker at http://code.google.com/p/psutil/issues
 ------------------
 NEW FEATURES
  * Issue 91: per-process send_signal() and terminate() methods.
+ * Issue 95: NoSuchProcess and AccessDenied exception classes now provide a 
+   "pid" and a "msg" attribute.
 
 BUGFIXES
  * Issue 94: suspend() raises OSError instead of AccessDenied.
